<resources>
    <string name="app_name">TargetApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cloce">Отмена</string>
    <string name="hello">Здравствуйте</string>
    <string name="mainlabel">Как ваши дела?</string>
    <string name="target">Цели</string>
    <string name="add_target">Добавить цель</string>
    <string name="btSave">Сохранить</string>
    <string name="btDelete">Удалить</string>
    <string name="name_note">Имя заметки</string>
    <string name="add_note">Добавить запись</string>
    <string name="save">Сохранить</string>
    <string name="step">Шаг:</string>
    <string name="next_step">Следующий шаг</string>
    <string name="desc">Описание</string>
    <string name="add_desc">Добавить описание</string>
    <string-array name="tab_title">
        <item>Цель</item>
        <item>Шаги</item>
        <item>Заметки</item>
    </string-array>
</resources>