<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    android:backgroundTint="#000000"
    android:orientation="vertical"
    tools:context=".ui.stepInfo.StepInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="56dp"
        tools:layout_conversion_absoluteWidth="411dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btRevert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_22"
            android:layout_marginBottom="@dimen/space_22"
            android:src="@drawable/baseline_keyboard_backspace_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_24"
            android:text="@string/save"
            android:textColor="#F8F3F3"
            android:textSize="@dimen/size_21"
            app:layout_constraintBottom_toBottomOf="@+id/btRevert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/btRevert"
            app:layout_constraintTop_toTopOf="@+id/btRevert"
            tools:layout_conversion_absoluteHeight="28dp"
            tools:layout_conversion_absoluteWidth="85dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/titleStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step"
        android:textColor="#F8F0F0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etStep"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_51"
        android:layout_margin="@dimen/space_5"
        android:background="@drawable/corner_radius_edit_text"
        android:hint="@string/next_step"
        android:padding="@dimen/view_padding_10"
        android:textColor="#ECE0E0"
        android:textColorHint="#F1EBEB"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:layout_margin="@dimen/space_5"
        android:background="@color/gold" />

    <TextView
        android:id="@+id/titleDescriptoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textColor="@color/greyColor" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescriptor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_84"
        android:layout_margin="@dimen/space_5"
        android:background="@drawable/corner_radius_edit_text"
        android:gravity="start"
        android:hint="@string/add_desc"
        android:padding="@dimen/view_padding_10"
        android:textColor="@color/greyColor"
        android:textColorHint="@color/greyColor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_05"
        android:layout_margin="@dimen/space_5"
        android:background="@color/gold" />
    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btDelete"
        android:textColor="@color/gold" />
</LinearLayout>